--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-mysql-session": "^3.0.0",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
     "libphonenumber-js": "^1.10.33",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
